--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -17,7 +17,9 @@ $color-sidebar: #333645;
 $color-accent: rgb(146, 111, 177);
 
 $colour-heading: rgb(51, 54, 69);
+
 $white: white;
+$black: black;
 
 // BUTTONS
 $color-button-support: #4183d7;
@@ -43,3 +45,6 @@ $colour-social-fb: #3b5998;
 $colour-social-li: #0077b5;
 $colour-social-tw: #00aced;
 $colour-social-ig: #d93175;
+
+// ICON CODES
+$icon-code-home: "\e900";
