--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -38,9 +38,11 @@
     
     &::before {
         color: $color;
+        transition: 0.14s ease-in-out;
     }
     .submenu-banner {
         background-color: darken($color, 10%);
+        transition: 0.14s ease-in-out;
     }
 }
 
@@ -48,6 +50,7 @@
     background-color: $colour;
     h3, p, .content-item__icon {
         color: $white;
+        transition: 0.4s ease-in-out;
     }
     .content-item__icon {
         background-color: $white;
@@ -55,9 +58,12 @@
         height: 65px;
         color: $colour;
         border-radius: 100%;
+        transition: 0.4s ease-in-out;
     }
     button {
         color: $colour;
         background-color: $white;
+        transition: 0.4s ease-in-out;
     }
+    transition: 0.4s ease-in-out;
 }
