Header improvements, banner content and more QOL

--- a/scss/base/_banner.scss
+++ b/scss/base/_banner.scss
@@ -98,6 +98,9 @@
     @media (max-width: $screen-medium){
         top: 590px;
     }
+    @media (max-width: $screen-small){
+        top: 650px;
+    }
 }
 
 .banner-dot {
