--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -90,9 +90,9 @@ footer {
 .footer-copyright {
     background-color: $colour-primary-dark;
     width: 100%;
-    padding: 4px;
+    padding: 1px;
     text-align: left;
-    font-size: xx-small;
+    font-size: 14px;
 
     a {
         color: $white;
