--- a/scss/base/_slideshow.scss
+++ b/scss/base/_slideshow.scss
@@ -7,6 +7,7 @@
     // 100% overflows
     width: 98%;
 
+
     margin-left: 20px;
     margin-right: 20px;
 
@@ -43,24 +44,35 @@
         background-color: $color-primary;
         color: $white;
 
-
         transition: 
             opacity 0.15s ease-in-out 0.05s, // Delay only applies when closing
             visibility 0s linear 0.2s; // Wait for opacity transition before hiding
-
+            
     }
     .slideshow-submenu-content {
         display: flex;
         flex-direction: column;
         width: 100%;
-        padding: 10px;
+        padding: 15px;
 
+        p, h3 {
+            text-align: center;
+        }
+        h3 {
+            font-size: 20px;
+            font-weight: 400;
+            margin: 5px 0 5px 0;
+        }
+        p {
+            font-size: 13px;
+            line-height: 20px;
+        }
         button {
             @include buttonstyles(rgb(65, 131, 215));
             width: auto;
             height: 40px;
             text-transform: uppercase;
-            font-size: smaller;
+            font-size: 16px;
             &::after {
                 content: " ➙";
             }
@@ -75,7 +87,7 @@
         content-visibility: visible;
 
         transition: 
-            opacity 0.3s ease-in-out 0s,
+            opacity 0.3s ease-in-out 0.15s,
             visibility 0s linear 0s;
         }
 
