--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -1,1 +1,16 @@
-// Content containers (e.g. welcome)
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+
+    @media (min-width: $screen-small) {
+        width: 750px;
+    }
+    @media (min-width: $screen-medium) {
+        width: 970px;
+    }
+    @media (min-width: $screen-large) {
+        width: 1200px;
+    }
+}
