--- a/scss/utilities/_helpers.scss
+++ b/scss/utilities/_helpers.scss
@@ -1,18 +1,8 @@
 // Small classes for commonly used blocks of code
 
-.container {
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-
-    @media (min-width: $screen-small) {
-        width: 750px;
-    }
-    @media (min-width: $screen-medium) {
-        width: 970px;
-    }
-    @media (min-width: $screen-large) {
-        width: 1200px;
-    }
+@mixin navsubmenuicons($icon) {
+    
+    margin-right: 4px;
+    font-family: icomoon;
+    content: $icon;
 }
