--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -27,6 +27,8 @@ $color-button-grey: #999aa2;
 $color-button-border: rgba(255, 255, 255, 0.1);
 
 // NAV ICONS
+$colour-gold-star: orange;
+
 $colour-sof: rgb(103, 128, 159);
 $colour-sup: rgb(65, 131, 215);
 $colour-mar: rgb(46, 204, 113);
