--- a/scss/base/_main.scss
+++ b/scss/base/_main.scss
@@ -38,3 +38,82 @@ main {
     }
 }
 
+.content-welcome {
+    height: auto;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    color: $white;
+    background-color: $color-primary;
+
+    button {
+        @include buttonstyles($colour-primary-dark);
+        border-radius: 5px;
+    }
+    a {
+        color: $white;
+        text-decoration: none;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
+    .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+        "section1 section2";
+        gap: 30px;
+    }
+
+    .welcome-section1,
+    .welcome-section2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        h1 {
+            margin-top: 0;
+        }
+
+        &-buttons {
+
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+            margin-top: auto;
+
+            button {
+                margin: 0;
+                width: 100%; // Full width of grid cell
+                white-space: nowrap; // Prevent button text wrapping
+            }
+        }
+    }
+
+    .welcome-section2 {
+        grid-area: "section2";
+
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr auto;
+        grid-template-areas:
+        "content2 content2"
+        "button3 button4";
+
+        .welcome-section1-content {
+            grid-area: "content2";
+        }
+        #welcome-button1 {
+            grid-area: "button3";
+        }
+        #welcome-button2 {
+            grid-area: "button4";
+        }
+
+        .stars {
+            display: flex;
+            gap: 5px;
+            font-size: 42px;
+            color: $colour-gold-star;
+        }
+    }
+}
