--- a/scss/base/_main.scss
+++ b/scss/base/_main.scss
@@ -48,6 +48,9 @@ main {
     button {
         @include buttonstyles($colour-primary-dark);
         border-radius: 5px;
+        margin: 0;
+        width: 100%;
+        white-space: nowrap;
     }
     a {
         color: $white;
@@ -63,6 +66,14 @@ main {
         grid-template-areas:
         "section1 section2";
         gap: 30px;
+
+        @media (max-width: $screen-medium) {
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr 1fr;
+            grid-template-areas:
+            "section1"
+            "section2";
+        }
     }
 
     .welcome-section1,
@@ -76,44 +87,18 @@ main {
         }
 
         &-buttons {
-
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 10px;
             margin-top: auto;
-
-            button {
-                margin: 0;
-                width: 100%; // Full width of grid cell
-                white-space: nowrap; // Prevent button text wrapping
-            }
         }
     }
-
-    .welcome-section2 {
-        grid-area: "section2";
-
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr auto;
-        grid-template-areas:
-        "content2 content2"
-        "button3 button4";
-
-        .welcome-section1-content {
-            grid-area: "content2";
-        }
-        #welcome-button1 {
-            grid-area: "button3";
-        }
-        #welcome-button2 {
-            grid-area: "button4";
-        }
-
-        .stars {
-            display: flex;
-            gap: 5px;
-            font-size: 42px;
-            color: $colour-gold-star;
-        }
+    .stars {
+        display: flex;
+        gap: 5px;
+        font-size: 42px;
+        color: $colour-gold-star;
     }
+
+
 }
