--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -26,6 +26,7 @@ $color-button-support: #4183d7;
 $color-button-grey: #999aa2;
 $color-button-border: rgba(255, 255, 255, 0.1);
 
+
 // NAV ICONS
 $colour-gold-star: orange;
 
@@ -47,3 +48,5 @@ $colour-social-fb: #3b5998;
 $colour-social-li: #0077b5;
 $colour-social-tw: #00aced;
 $colour-social-ig: #d93175;
+$colour-social-google: #4387f6;
+$colour-social-trustpilot: #009b69;
