--- a/scss/base/_banner.scss
+++ b/scss/base/_banner.scss
@@ -35,12 +35,6 @@
         line-height: 2rem;
         margin-top: -1rem;
     }
-    .banner-item-button {
-        &::after {
-            content: $icon-code-arrow;
-            margin-left: 10px;
-        }
-    }
 
     @media (max-width: $screen-large){
         h1 {
@@ -77,7 +71,7 @@
     url("https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-YLei.webp");  
         
     .banner-item-button {
-        @include buttonstyles($color-accent);
+        @include buttonstyles($color-accent, true);
         margin-left: 0;
     }
 }
