Footer gap tweak

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -108,6 +108,9 @@ footer {
     #footer-logo {
         padding-top: 20px;
     }
+    .footer-links {
+        gap: 0;
+    }
     .footer-links--section {
         padding: 0px;
         padding-bottom: 15px;
