--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -20,6 +20,11 @@ $colour-heading: rgb(51, 54, 69);
 
 $white: white;
 $black: black;
+$grey: rgb(102, 102, 102);
+
+$colour-border: rgb(204, 204, 204);
+
+$colour-news-yellow: rgb(219, 140, 13);
 
 // BUTTONS
 $color-button-support: #4183d7;
