--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -62,13 +62,13 @@ header {
 
     #searchbox {
         width: 200px;
+        padding-left: 10px;
         flex-grow: 2;
         height: 56px;
         border: 1px solid $color-button-grey;
         border-radius: 3px 0px 0px 3px;
         &::placeholder {
             position: relative;
-            padding-left: 10px;
             font-size: 15px;
             opacity: 0.75;
             top: -1px;
@@ -125,10 +125,9 @@ header {
         border: 2px solid lighten($color-button-grey, 20%);
         border-radius: 3px 0px 0px 3px;
         box-shadow: inset 50px 100px lighten($color-button-grey, 30%);
-
+        padding-left: 10px;
         &::placeholder {
             position: relative;
-            padding-left: 10px;
             font-size: 15px;
             opacity: 0.75;
             top: -1px;
@@ -180,14 +179,15 @@ header {
         flex-direction: column;
         align-items: center;
         padding: 1rem;
+        width: 1rem;
         flex-grow: 1;
         
         // Submenu popup
         &:hover {
             .submenu-banner {
-            display: block;
-            opacity: 1;
-            visibility: visible;
+                display: block;
+                opacity: 1;
+                visibility: visible;
             }
         }
 
