--- a/assets/iconmoon/style.css
+++ b/assets/iconmoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?9jz878');
-  src:  url('fonts/icomoon.eot?9jz878#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?9jz878') format('truetype'),
-    url('fonts/icomoon.woff?9jz878') format('woff'),
-    url('fonts/icomoon.svg?9jz878#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?yd9b9g');
+  src:  url('fonts/icomoon.eot?yd9b9g#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?yd9b9g') format('truetype'),
+    url('fonts/icomoon.woff?yd9b9g') format('woff'),
+    url('fonts/icomoon.svg?yd9b9g#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,10 +25,138 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-nintendoswitch:before {
-  content: "\e901";
-  color: #e60012;
-}
-.icon-home:before {
+.icon-mouse:before {
   content: "\e900";
+}
+.icon-bar-graph:before {
+  content: "\e901";
+}
+.icon-handshake-o:before {
+  content: "\e902";
+}
+.icon-computer:before {
+  content: "\e903";
+}
+.icon-laptop:before {
+  content: "\e903";
+}
+.icon-school:before {
+  content: "\e904";
+}
+.icon-security:before {
+  content: "\e905";
+}
+.icon-facebook:before {
+  content: "\e906";
+  color: #1877f2;
+}
+.icon-instagram:before {
+  content: "\e907";
+  color: #e4405f;
+}
+.icon-linkedin:before {
+  content: "\e908";
+  color: #0077b5;
+}
+.icon-x:before {
+  content: "\e909";
+}
+.icon-pencil:before {
+  content: "\e90a";
+}
+.icon-headphones:before {
+  content: "\e910";
+}
+.icon-bullhorn:before {
+  content: "\e91a";
+}
+.icon-paste:before {
+  content: "\e92d";
+}
+.icon-folder-open:before {
+  content: "\e930";
+}
+.icon-ticket:before {
+  content: "\e939";
+}
+.icon-cart:before {
+  content: "\e93a";
+}
+.icon-credit-card:before {
+  content: "\e93f";
+}
+.icon-lifebuoy:before {
+  content: "\e941";
+}
+.icon-phone:before {
+  content: "\e942";
+}
+.icon-envelop:before {
+  content: "\e945";
+}
+.icon-clock:before {
+  content: "\e94e";
+}
+.icon-display:before {
+  content: "\e956";
+}
+.icon-mobile:before {
+  content: "\e958";
+}
+.icon-box-add:before {
+  content: "\e95e";
+}
+.icon-drive:before {
+  content: "\e963";
+}
+.icon-users:before {
+  content: "\e972";
+}
+.icon-search:before {
+  content: "\e986";
+}
+.icon-lock:before {
+  content: "\e98f";
+}
+.icon-cogs:before {
+  content: "\e995";
+}
+.icon-stats-dots:before {
+  content: "\e99b";
+}
+.icon-meter:before {
+  content: "\e9a6";
+}
+.icon-lab:before {
+  content: "\e9aa";
+}
+.icon-briefcase:before {
+  content: "\e9ae";
+}
+.icon-menu:before {
+  content: "\e9bd";
+}
+.icon-cloud:before {
+  content: "\e9c1";
+}
+.icon-cloud-download:before {
+  content: "\e9c2";
+}
+.icon-earth:before {
+  content: "\e9ca";
+}
+.icon-star-full:before {
+  content: "\e9d9";
+}
+.icon-shuffle:before {
+  content: "\ea30";
+}
+.icon-arrow-right2:before {
+  content: "\ea3c";
+}
+.icon-tab:before {
+  content: "\ea45";
+}
+.icon-embed2:before {
+  content: "\ea80";
 }
