Started replacing placeholder icons with the final ones

--- a/scss/utilities/_icons.scss
+++ b/scss/utilities/_icons.scss
@@ -1,6 +1,15 @@
 // ICON CODES
-$icon-code-arrow: "➙";
+$icon-code-arrow: "\ea3c";
 $icon-code-home: "\e900";
+
+// MENU ICON CODES
+$icon-code-laptop: "\e903";
+$icon-code-display: "\e956";
+$icon-code-bars: "\e901";
+$icon-code-phone: "\e942";
+$icon-code-code: "\ea80";
+$icon-code-shield: "\e905";
+$icon-code-mortar: "\e904";
 
 // SUBMENU ICON CODES
 $submenu-icons: (
