--- a/scss/base/_main.scss
+++ b/scss/base/_main.scss
@@ -20,9 +20,10 @@ main {
         font-weight: 600;
         font-size: 1.8rem;
         padding-top: 5px;
-
         &::after {
+            font-family: icomoon;
             content: $icon-code-arrow;
+            font-size: 32px;
             margin-left: 10px;
         }
         &:hover {
