--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -106,11 +106,19 @@ header {
         width: 128px;        
         &::before {
             font-family: icomoon;
-            content: $icon-code-home;
             padding-right: 12px;
         }
     }
-
+    #button-support {
+        &::before {
+            content: "\e941";
+        }
+    }
+    #button-contact {
+        &::before {
+            content: "\e945";
+        }
+    }
 }
 
 // Mobile nav bar
@@ -262,13 +270,13 @@ header {
         &#sec { @include nav-item-colors($colour-sec); }
         &#cou { @include nav-item-colors($colour-dev); }
 
-        &#sof::before { content: "\e900"; }
-        &#sup::before { content: "\e901"; }
-        &#mar::before { content: "\e900"; }
-        &#ser::before { content: "\e900"; }
-        &#des::before { content: "\e900"; }
-        &#sec::before { content: "\e900"; }
-        &#cou::before { content: "\e900"; }
+        &#sof::before { content: $icon-code-laptop; }
+        &#sup::before { content: $icon-code-display; }
+        &#mar::before { content: $icon-code-bars; }
+        &#ser::before { content: $icon-code-phone; }
+        &#des::before { content: $icon-code-code; }
+        &#sec::before { content: $icon-code-shield; }
+        &#cou::before { content: $icon-code-mortar; }
 
     }
 }
