--- a/scss/utilities/_icons.scss
+++ b/scss/utilities/_icons.scss
@@ -13,57 +13,57 @@ $icon-code-mortar: "\e904";
 
 // SUBMENU ICON CODES
 $submenu-icons: (
-    "sof1": $icon-code-home,
-    "sof2": $icon-code-home,
-    "sof3": $icon-code-home,
-    "sof4": $icon-code-home,
-    "sof5": $icon-code-home,
-    "sof6": $icon-code-home,
-    "sof7": $icon-code-home,
-    "sof8": $icon-code-home,
-    "sof9": $icon-code-home,
-    "sof10": $icon-code-home,
-    "sof11": $icon-code-home,
-    "sof12": $icon-code-home,
-    "sof13": $icon-code-home,
+    "sof1": "\e995",
+    "sof2": "\e9ae",
+    "sof3": "\ea30",
+    "sof4": "\e958",
+    "sof5": "\e930",
+    "sof6": "\ea45",
+    "sof7": "\e95e",
+    "sof8": "\e972",
+    "sof9": $icon-code-laptop,
+    "sof10": "\e9c1",
+    "sof11": "\e9c2",
+    "sof12": "\e9ca",
+    "sof13": "\e902",
 
-    "sup1": $icon-code-home,
-    "sup2": $icon-code-home,
-    "sup3": $icon-code-home,
-    "sup4": $icon-code-home,
-    "sup5": $icon-code-home,
-    "sup6": $icon-code-home, 
+    "sup1": "\e910",
+    "sup2": "\e9ae",
+    "sup3": $icon-code-laptop,
+    "sup4": "\e904",
+    "sup5": "\e9c1",
+    "sup6": "\e963", 
     
-    "mar1": $icon-code-home,
-    "mar2": $icon-code-home,
-    "mar3": $icon-code-home,
-    "mar4": $icon-code-home,
-    "mar5": $icon-code-home,
-    "mar6": $icon-code-home,
+    "mar1": "\e986",
+    "mar2": "\e93f",
+    "mar3": "\e99b",
+    "mar4": "\e945",
+    "mar5": "\e972",
+    "mar6": "\e90a",
 
-    "ser1": $icon-code-home,
-    "ser2": $icon-code-home,
-    "ser3": $icon-code-home,
-    "ser4": $icon-code-home,
-    "ser5": $icon-code-home,
-    "ser6": $icon-code-home,
+    "ser1": "\e939",
+    "ser2": "\e942",
+    "ser3": "\e942",
+    "ser4": "\e9a6",
+    "ser5": "\e902",
+    "ser6": "\e958",
 
-    "des1": $icon-code-home,
-    "des2": $icon-code-home,
-    "des3": $icon-code-home,
-    "des4": $icon-code-home,
-    "des5": $icon-code-home,
-    "des6": $icon-code-home,
+    "des1": "\e90a",
+    "des2": "\e93a",
+    "des3": $icon-code-display,
+    "des4": "\e91a",
+    "des5": "\e958",
+    "des6": "\e9c1",
 
-    "sec1": $icon-code-home,
-    "sec2": $icon-code-home,
-    "sec3": $icon-code-home,
-    "sec4": $icon-code-home,
-    "sec5": $icon-code-home,
-    "sec6": $icon-code-home,
+    "sec1": "\e92d",
+    "sec2": "\e94e",
+    "sec3": "\e9aa",
+    "sec4": "\e904",
+    "sec5": "\e905",
+    "sec6": "\e98f",
 
-    "cou1": $icon-code-home,
-    "cou2": $icon-code-home,
-    "cou3": $icon-code-home,
-    "cou4": $icon-code-home
+    "cou1": $icon-code-laptop,
+    "cou2": $icon-code-code,
+    "cou3": "\e941",
+    "cou4": "\e902"
 );
