--- a/scss/base/_main.scss
+++ b/scss/base/_main.scss
@@ -17,13 +17,13 @@ main {
         font-size: 2.25rem;
     }
     h2 {
-        font-weight: 600;
-        font-size: 1.8rem;
+        font-weight: 500;
+        font-size: 1.5rem;
         padding-top: 5px;
         &::after {
             font-family: icomoon;
             content: $icon-code-arrow;
-            font-size: 32px;
+            font-size: 26px;
             margin-left: 10px;
         }
         &:hover {
@@ -225,8 +225,7 @@ main {
         }
 
         &:hover {
-            margin-top: -10px;
-            margin-bottom: 10px;
+            transform: translateY(-10px);
             cursor: pointer;
         }
 
