--- a/scss/base/_services.scss
+++ b/scss/base/_services.scss
@@ -27,7 +27,7 @@
     padding: 20px;
     transition: all 0.4s ease-in-out;
 
-    border: 2px solid $color-button-border;
+    border: 1px solid $colour-border;
     border-radius: 15px;
     box-shadow: 0px 0px 50px lighten($color-button-grey, 30%);
 
@@ -40,11 +40,12 @@
     }
 
     .content-item__icon {
-        font-size: 42px;
-        width: 65px;
-        height: 65px;
+        font-size: 32px;
+        width: 64px;
+        height: 64px;
         border-radius: 100%;
-        padding: 10px;
+        padding-top: 16px;
+        text-align: center;
     }
 
 
@@ -90,7 +91,7 @@
         &#dev{ @include hoverColourChange($colour-dev); }    
 
         @media (min-width: $screen-medium) {
-            margin-top: -10px; 
+            transform: translateY(-10px);
         }
     }
 
