--- a/scss/base/_slideshow.scss
+++ b/scss/base/_slideshow.scss
@@ -73,7 +73,10 @@
             text-transform: uppercase;
             font-size: 16px;
             &::after {
-                content: " ➙";
+                margin-left: 6px;
+                font-family: icomoon;
+                font-size: 14px;
+                content: $icon-code-arrow;
             }
         }
     }
