--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -249,6 +249,7 @@ header {
 
                     &:hover {
                         text-decoration: underline;
+                        // PREVENT THIS APPLYING TO ICONS
                     }
     
                     @each $id, $icon in $submenu-icons {
