--- a/scss/utilities/_vars.scss
+++ b/scss/utilities/_vars.scss
@@ -31,6 +31,8 @@ $color-button-support: #4183d7;
 $color-button-grey: #999aa2;
 $color-button-border: rgba(255, 255, 255, 0.1);
 
+$colour-input-glow-border: #5bc0de;
+$colour-input-glow-colour: rgba(91, 192, 222, .6);
 
 // NAV ICONS
 $colour-gold-star: orange;
