--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -24,6 +24,7 @@ header {
 
     .container {
         justify-content: space-between;
+        gap: 1em;
         display: flex;
         align-items: center;
     }
@@ -36,27 +37,31 @@ header {
     }
 
     #header-logo {
-        margin-top: 10px;
-        margin-bottom: 10px;
-        margin-right: 1em;
+        height: auto;
+        width: 18.5em;
+        margin: 10px 3.5em 10px 0;
     }
 
     button, #button-search {
         @include buttonstyles($color-button-grey);
+        margin: 0;
         height: 56px;
         flex-grow: 1;
     }
     #button-support {
         @include buttonstyles($color-button-support);
+        margin: 0;
+        font-size: 0.9em;
         &::before {
-            content: $icon-code-home;
+            content: "\e941";
         }
     }
     #button-contact {
         @include buttonstyles($color-button-grey);
-        padding-right: 120px;
+        margin: 0;
+        font-size: 0.9em;
         &::before {
-            content: $icon-code-home;
+            content: "\e945";
         }
     }
 
@@ -65,6 +70,7 @@ header {
         padding-left: 10px;
         flex-grow: 2;
         height: 56px;
+        transition: 0.25s;
         border: 1px solid $color-button-grey;
         border-radius: 3px 0px 0px 3px;
         &::placeholder {
@@ -73,6 +79,12 @@ header {
             opacity: 0.75;
             top: -1px;
         }
+        &:focus {
+            transition: 0.25s;
+            outline: 0;
+            border-color: $colour-input-glow-border;
+            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px $colour-input-glow-colour;
+        }
     }
     // Submit button styling
     .submit-styles {
@@ -80,14 +92,14 @@ header {
         display: inline-block;
 
         #button-search {
-            margin-left: 0;
+            margin-left: -20px;
             border-radius: 0 3px 3px 0;
             width: 64px;
         }
         .nav-icon {
             // Overlay icon on top of the button
             position: absolute;
-            left: 18px;
+            left: -2px;
             top: 50%;
             transform: translateY(-50%);
             pointer-events: none;
@@ -95,18 +107,30 @@ header {
     }
 
     #button-nav {
-        background-color: $colour-primary-dark;
-        width: 32px;
-        text-align: center;
-    }
+        @include buttonstyles(rgba($colour-primary-dark, 0.95));
+        width: 1.5em;
+        height: 56px;
+        margin: 0;
+        font-size: 32px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        .nav-icon {
+            display: block;
+            margin: auto 0;
+        }
+    } 
+
 
     // Apply these styles after the buttons for DRY
     #button-support, #button-contact {
         height: 56px;
-        width: 128px;        
+        width: 7.5em;
         &::before {
             font-family: icomoon;
-            padding-right: 12px;
+            padding-right: 6px;
         }
     }
     #button-support {
@@ -305,6 +329,9 @@ header {
             .container {
                 justify-content: center;
             }
+            #header-logo {
+                margin: 10px 1.5em 10px 0;
+            }
             #button-support,
             #button-contact {
                 display: none;
@@ -329,9 +356,6 @@ header {
         padding-bottom: 170px;
 
         .main-heading {
-            #button-nav {
-                width: 64px;
-            }
             #searchbox {
                 display: none;
             }
