--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,6 +1,6 @@
 // Include reusable mixins here
 
-@mixin buttonstyles($background-colour: $colour-primary-dark, $has-arrow: null) {
+@mixin buttonstyles($background-colour: $colour-primary-dark, $has-arrow: false) {
     text-transform: uppercase;
     width: fit-content;
     height: 62px;
@@ -11,7 +11,7 @@
     border-radius: 3px;
     margin: 5px;
     padding: 5px 20px;
-    padding-bottom: 3px;
+    padding-bottom: 5px;
     white-space: nowrap;
     cursor: pointer;
     &:hover {
