--- a/scss/base/_banner.scss
+++ b/scss/base/_banner.scss
@@ -22,18 +22,19 @@
     }    
     h1, h2 {
         font-weight: 600;
+        letter-spacing: 0.05rem;
     }
     h1 {
-        margin-top: 1.5em;
-        width: 80%;
-        font-size: 3.1rem;
-        line-height: 3.5rem;
+        margin-top: 1.35em;
+        width: 85%;
+        font-size: 3.2rem;
+        line-height: 4rem;
     }
     h2 {
         width: 75%;
         font-size: 1.3rem;
         line-height: 2rem;
-        margin-top: -1rem;
+        margin-top: -1.7rem;
     }
 
     @media (max-width: $screen-large){
