--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -292,7 +292,7 @@ header {
         &::before {
             font-family: icomoon;
             font-size: 1.15rem;
-            line-height: 30px;
+            line-height: 1.5rem;
             margin-top: -4px;
             margin-bottom: 4px;
         }
