--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -210,7 +210,7 @@ header {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 1rem 1rem 17px 1rem;
+        padding: 1rem 1rem 1rem 1rem;
         width: 1rem;
         height: auto;
         flex-grow: 1;
