--- a/scss/base/_slideshow.scss
+++ b/scss/base/_slideshow.scss
@@ -16,6 +16,8 @@
     justify-content: space-between;
     align-items: center;
     gap: 10px;
+
+    overflow: visible;
 }
 
 .slideshow-element {
@@ -25,13 +27,16 @@
         width: 100%;
         height: auto;
         filter: grayscale(1);
+        transition: filter 0.2s ease-in-out;
     }
+
     .slideshow-submenu-banner {
         position: absolute;
         opacity: 0;
         visibility: hidden;
         content-visibility: hidden;
-
+        pointer-events: none;
+        
         bottom: 100%;
         left: 50%;
         transform: translateX(-50%);
@@ -42,12 +47,10 @@
         // If I knew how to prevent it going offscreen, I'd do it here
         background-color: $color-primary;
         color: $white;
-
-        transition: 
-            opacity 0.15s ease-in-out,
-            visibility 0s linear 0.2s;
         
+        transition: all 0.3s ease-in-out;
     }
+
     .slideshow-submenu-content {
         display: flex;
         flex-direction: column;
@@ -81,20 +84,15 @@
         }
     }
 
-// Hover controls
-    &:hover {
+    &:hover, .slideshow-submenu-banner:hover {
         .slideshow-submenu-banner {
-        opacity: 1;
-        visibility: visible;
-        content-visibility: visible;
-
-        transition: 
-            opacity 0.3s ease-in-out 0.15s,
-            visibility 0s linear 0s;
+            opacity: 1;
+            visibility: visible;
+            content-visibility: visible;
+            pointer-events: auto;
         }
 
         img {
-            transition: 0.2s ease-in-out;
             filter: grayscale(0);
         }
     }
