--- a/scss/base/_slideshow.scss
+++ b/scss/base/_slideshow.scss
@@ -1,7 +1,7 @@
 //Image slideshows
 
 .slideshow {
-    overflow: visible;
+    overflow: hidden;
 
     height: 170px;
     // 100% overflows
@@ -17,7 +17,10 @@
     align-items: center;
     gap: 10px;
 
-    overflow: visible;
+    // When any child is hovered, make overflow visible
+    &:has(.slideshow-element:hover) {
+        overflow: visible;
+    }
 }
 
 .slideshow-element {
@@ -34,8 +37,6 @@
         position: absolute;
         opacity: 0;
         visibility: hidden;
-        content-visibility: hidden;
-        pointer-events: none;
         
         bottom: 100%;
         left: 50%;
@@ -44,11 +45,23 @@
 
         width: 280px;
         height: auto;
-        // If I knew how to prevent it going offscreen, I'd do it here
         background-color: $color-primary;
         color: $white;
         
-        transition: all 0.3s ease-in-out;
+        // Long delay before hiding
+        transition: 
+            opacity 0.3s ease-in-out,
+            visibility 0s linear 0.8s;
+    }
+
+    // Create an invisible area between image and banner to prevent losing hover
+    &::after {
+        content: '';
+        position: absolute;
+        bottom: 100%;
+        left: 0;
+        width: 100%;
+        height: 30px; // Same as margin-bottom of banner
     }
 
     .slideshow-submenu-content {
@@ -84,12 +97,14 @@
         }
     }
 
-    &:hover, .slideshow-submenu-banner:hover {
+    &:hover {
         .slideshow-submenu-banner {
             opacity: 1;
             visibility: visible;
-            content-visibility: visible;
-            pointer-events: auto;
+            
+            transition: 
+                opacity 0.3s ease-in-out,
+                visibility 0s linear;
         }
 
         img {
